# autolumemac

./: .gitignore  LICENSE  README.md
autolume/: installer.sh  requirements.txt  run_torchscript_job.py  test_ops_comparison.py  torchscript_inference.py
autolume/architectures/: custom_stylegan2.py  custom_stylegan2_win.py  stylegan2_pure_ops.py
autolume/audio/: feature_extractor.py
autolume/modules/: network_utils.py
autolume/widgets/: renderer.py
autolume_/: offline_audio_inference.py  offline_audio_inference_standard.py  run_audio_inference_job.py
autolume_/architectures/: custom_stylegan2_simple.py
rtautolume/: .gitignore  CMakeLists.txt  LICENSE  README.md
rtautolume/plugin/: CMakeLists.txt
rtautolume/plugin/include/: PluginEditor.h  PluginProcessor.h  audiofx.h  autolume.h  defines.h
rtautolume/plugin/source/: PluginEditor.cpp  PluginProcessor.cpp  autolume.cpp
